# devolve-ui.js

./: .gitignore  .gitmodules  404.html  Cargo.toml  README.md  clippy.toml  esbuild.cjs  index.html  logo.afdesign  mkdocs.yml  package.json  pnpm-lock.yaml  prompt-based-gui.md  sitemap.xml  ts-standardx.mjs  tsconfig.json
dedup-struct-fields/: Cargo.toml  README.md
dedup-struct-fields/src/: lib.rs
design-decisions/: index.html
devolve-ui/: Cargo.toml  README.md
devolve-ui-derive/: Cargo.toml
devolve-ui-derive/src/: attr.rs  data.rs  lens.rs  lib.rs  obs_ref.rs
devolve-ui-forms/: Cargo.toml  README.md
devolve-ui-forms/src/: lib.rs
devolve-ui-prompt/: Cargo.toml
devolve-ui-prompt/src/: constr.rs  context.rs  lib.rs  misc.rs  prompt.rs  waker.rs
devolve-ui-prompt/src/misc/: mod.rs
devolve-ui-tui/: Cargo.toml
devolve-ui-tui-forms/: Cargo.toml  README.md
devolve-ui-tui-forms/src/: lib.rs
devolve-ui-tui/src/: lib.rs
devolve-ui-tui/src/engine/: layer.rs  mod.rs  terminal_image.rs  tui.rs
devolve-ui-tui/src/misc/: io_write_2_fmt_write.rs  mod.rs
devolve-ui-tui/src/view_data/: constr.rs  mod.rs  tui.rs
devolve-ui-wasm/: .gitignore  Cargo.toml  esbuild.cjs  package.json  pnpm-lock.yaml  ts-standardx.mjs  tsconfig.json
devolve-ui-wasm/js/: index.ts  wasm.d.ts
devolve-ui-wasm/src/: lib.rs  wasi.rs  wasm.rs
devolve-ui/docs/: prompt-component.md
devolve-ui/src/: lib.rs
devolve-ui/src/component/: component.rs  constr.rs  context.rs  mod.rs  node.rs  parent.rs  path.rs  root.rs  update_details.rs
devolve-ui/src/core/: mod.rs
devolve-ui/src/core/component/: component.rs  constr.rs  constr.rs.bak  context.rs  macros.rs  mod.rs  mode.rs  node.rs  parent.rs  path.rs  root.rs  update_details.rs
devolve-ui/src/core/data/: data.rs  lens.rs  mod.rs  obs_ref.rs  rx.rs
devolve-ui/src/core/data/obs_ref/: leaf.rs  mod.rs  vec.rs
devolve-ui/src/core/data/obs_ref/generic/: mod.rs
devolve-ui/src/core/data/obs_ref/st/: leaf.rs  mod.rs  vec.rs  zst.rs
devolve-ui/src/core/data/rx/: context.rs  mod.rs  observers.rs  refs.rs  run_rx.rs  snapshot_ctx.rs
devolve-ui/src/core/data/scoped_rc/: mod.rs
devolve-ui/src/core/hooks/: atomic_ref_state.rs  context.rs  effect.rs  event.rs  mod.rs  obs_ref_state.rs  provider.rs  state.rs  state_internal.rs  tree_ref_state.rs
devolve-ui/src/core/logging/: common.rs  mod.rs  render_logger.rs  update_logger.rs
devolve-ui/src/core/misc/: assert_variance.rs  castable_pointer.rs  cell_vec.rs  either_future.rs  float_ord.rs  fmt_mode.rs  frozen_vec.rs  hash_map_ref_stack.rs  ident.rs  input.rs  io_write_2_fmt_write.rs  is_thread_safe.rs  mod.rs  notify_bool.rs  notify_flag.rs  option_f32.rs  ref_stack.rs  shorthand.rs  slice_split3.rs
devolve-ui/src/core/renderer/: engine.rs  input.rs  listeners.rs  mod.rs  render.rs  renderer.rs  running.rs  stale_data.rs  traceback.rs
devolve-ui/src/core/view/: border_style.rs  color.rs  constr.rs  macros.rs  mod.rs  rectangle.rs  view.rs
devolve-ui/src/core/view/layout/: bounds.rs  err.rs  geom.rs  macros.rs  measurement.rs  mod.rs  parent_bounds.rs
devolve-ui/src/data/: data.rs  mod.rs
devolve-ui/src/data/obs_ref/: mod.rs
devolve-ui/src/data/obs_ref/generic/: leaf.rs  mod.rs  vec.rs
devolve-ui/src/data/obs_ref/st/: leaf.rs  vec.rs  zst.rs
devolve-ui/src/data/scoped_rc/: mod.rs
devolve-ui/src/engines/: mod.rs  tui.rs
devolve-ui/src/engines/tui/: layer.rs  mod.rs  terminal_image.rs  tui.rs
devolve-ui/src/hooks/: atomic_ref_state.rs  effect.rs  event.rs  mod.rs  provider.rs  state.rs  state_internal.rs  tree_ref_state.rs
devolve-ui/src/logging/: common.rs  mod.rs  render_logger.rs  update_logger.rs
devolve-ui/src/misc/: float_ord.rs  hash_map_ref_stack.rs  is_thread_safe.rs  map_lock_result.rs  map_split_n.rs  mod.rs  notify_flag.rs  option_f32.rs  partial_default.rs  shorthand.rs
devolve-ui/src/prompt/: constr.rs  context.rs  mod.rs  prompt.rs  resume.rs  waker.rs
devolve-ui/src/renderer/: engine.rs  input.rs  listeners.rs  mod.rs  render.rs  renderer.rs  running.rs  stale_data.rs  traceback.rs
devolve-ui/src/view/: color.rs  constr.rs  dyn_view_data.rs  mod.rs  view.rs
devolve-ui/src/view/layout/: bounds.rs  err.rs  geom.rs  macros.rs  measurement.rs  parent_bounds.rs
devolve-ui/src/view_data/: attrs.rs  mod.rs  tui.rs
devolve-ui/src/view_data/tui/: constr.rs  macros.rs  mod.rs  terminal_image.rs  tui.rs
devolve-ui/src/wasm/: mod.rs
devolve-ui/test-output/: readme-actual.txt  readme-expected.txt
devolve-ui/test-output/snapshots/: forms-actual.txt  forms-expected.txt  readme-actual.txt  readme-expected.txt  readme-grayscale-actual.txt  readme-grayscale-expected.txt  readme-sixel-actual.txt  readme-sixel-expected.txt
devolve-ui/tests/: basic.rs  constr.rs  forms.rs  obs_ref.rs  readme.rs  test1.rs
devolve-ui/tests/test_output/: mod.rs
docs/: README.md  design-decisions.md  devolve-ui-comparisons.md  model-in-ui.md  prompt-based-gui.md
dui-backend-egui/: Cargo.toml  README.md
dui-bevy/: Cargo.toml  README.md
dui-bevy/src/: lib.rs
dui-bevy/src/file/: interface.rs  measurement.rs  mod.rs  serialize_with_global_vars.rs  tests.rs  var.rs
dui-bevy/src/gpu/: file.rs  mod.rs  runtime.rs  settings.rs  shader.wgsl  vertex.rs
dui-bevy/src/misc/: array_vec.rs  mod.rs  parse.rs  test_utils.rs
dui-bevy/src/runtime/: mod.rs
dui-bevy/test-resources/duis/: ball-platformer-simple.dui  ball-platformer.dui
dui-bevy/test-resources/expected_order/: ball-platformer.toml
dui-bevy/winit-tests/: main.rs
dui-prompt/: Cargo.toml  README.md
mini-rx/: Cargo.toml
prompt-based-gui/: index.html
search/: search_index.json
src/: DevolveUICore.ts  PromptDevolveUICore.ts  flash-prompt.ts  index-cjs.ts  index-esm.ts  index.ts  jsx-runtime.ts  render-cjs.ts  render-esm.ts  render.ts  types.d.ts
src/cli/: elements.ts  index.ts  react-adapter.ts  renderer.ts  vdom.ts
src/core/: DevolveUICore.ts  augment-set.ts  component.ts  elements.ts  hooks.ts  index.ts  lens.ts  platform.ts  react-adapter.ts  renderer.ts  vdom.ts
src/facades/: chalk-cjs.ts  (+5 more)
(+73 files in other folders)
