[workspace]
resolver = "2"
members = [
    "devolve-ui-core",
    "devolve-ui-macros",
    "dui-basic",
    "dui-bevy",
    "mini-rx",
    "winit-modular",
    "zmq2"
]
default-members = [
    "devolve-ui-core",
    "devolve-ui-macros",
    "dui-basic",
    "dui-bevy",
    "mini-rx",
    "winit-modular",
    "zmq2"
]
