[workspace]
resolver = "2"
members = [
    "dui-graph",
    "dui-editor",
    "dui-backend-egui",
    "dui-prompt",
    "structural-reflection",
    "type-map"
]
default-members = [
    "dui-graph",
    "dui-editor",
    "dui-backend-egui",
    "dui-prompt",
    "structural-reflection",
    "type-map"
]
