[workspace]
resolver = "2"
members = [
    "devolve",
    "devolve-ui",
    "dui-editor",
    "dui-backend-egui",
    "dui-prompt",
    "structural-reflection"
]
default-members = [
    "devolve",
    "devolve-ui",
    "dui-editor",
    "dui-backend-egui",
    "dui-prompt",
    "structural-reflection"
]
