[package]
name = "dedup-struct-fields"
version = "0.1.0"
authors = ["jakobeha"]
description = "remove trailing duplicate struct fields, helpful for macros-by-example"
repository = "https://github.com/jakobeha/dedup-struct-fields.rs"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.94", features = ["full"] }
quote = "1.0.18"
itertools = "0.10.3"