[package]
name = "devolve-ui-derive"
version = "0.1.0"
authors = ["jakobeha"]
description = "macros for devolve-ui"
repository = "https://github.com/jakobeha/devolve-ui.rs"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"

[dev-dependencies]
devolve-ui = { path = "../devolve-ui" }