[package]
name = "devolve-ui-prompt"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = "prompt-based UI for devolve-ui"
repository = "https://github.com/jakobeha/devolve-ui.rs"
license = "Apache-2.0"
keywords = ["ui", "prompt"]
categories = ["command-line-interface", "gui"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
time = ["devolve-ui/time"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devolve-ui = { path = "../devolve-ui", features = [] }
derivative = "2.2.0"
derive_more = "0.99.17"

[dev-dependencies]
devolve-ui-tui = { path = "../devolve-ui-tui" }
devolve-ui-forms = { path = "../devolve-ui-forms" }
rand = "0.8.5"
test-log = "0.2.10"
env_logger = "0.9.0"
