[package]
name = "devolve-ui-tui"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = "TUI frontent for devolve-ui"
repository = "https://github.com/jakobeha/devolve-ui.rs"
license = "Apache-2.0"
keywords = ["ui", "tui", "terminal"]
categories = ["command-line-interface"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
images = ["semver", "tempfile", "sixel", "sixel-sys", "png", "base64"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devolve-ui = { path = "../devolve-ui" }
derivative = "2.2.0"
replace_with = "0.1.7"
derive_more = "0.99.17"
log = "0.4.17"
palette = "0.6.0"
libc = "0.2.126"
crossterm = "0.23.2"
lazy_static = "1.4.0"
unicode-width = "0.1.9"
semver = { version = "1.0.9", optional = true }
tempfile = { version = "3.3.0", optional = true }
sixel = { version = "0.3.2", optional = true }
sixel-sys = { version = "0.3.1", optional = true }
png = { version = "0.17.5", optional = true }
base64 = { version = "0.13.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
test-log = "0.2.10"
env_logger = "0.9.0"
