[package]
name = "devolve-ui"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = "TUI (and planned future GUI) library using Reactive programming"
repository = "https://github.com/jakobeha/devolve-ui.rs"
license = "Apache-2.0"
keywords = ["ui", "tui", "terminal"]
categories = ["command-line-interface", "gui"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
# Include debug features by default
default = ["debug"]
obs-ref = ["smallvec"]
time = ["tokio"]
time-blocking = ["time", "tokio/rt"]
input = ["bitflags"]
logging = ["serde", "arrayvec/serde", "serde_json", "chrono"]
color = ["palette"]
crossterm-conversions = ["crossterm"]
debug = ["bitflags"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devolve-ui-derive = { path = "../devolve-ui-derive" }
derivative = "2.2.0"
arrayvec = "0.7.2"
replace_with = "0.1.7"
derive_more = "0.99.17"
log = "0.4.17"
transmute = "0.1.1"
mini-rx = { path = "../mini-rx", optional = true }
palette = { version = "0.6.0", optional = true }
smallvec = { version = "1.8.0", optional = true }
tokio = { version = "1.20.0", features = ["time"], optional = true }
bitflags = { version = "1.3.2", optional = true }
backtrace = { version = "0.3.65", optional = true }
serde = { version = "1.0.137", features = ["derive"], optional = true }
serde_json = { version = "1.0.81", optional = true }
chrono = { version = "0.4.19", features = ["serde"], optional = true }
crossterm = { version = "0.23.2", optional = true }

[dev-dependencies]
devolve-ui-tui = { path = "../devolve-ui-tui", features = ["time", "input", "images"] }
devolve-ui-tui-forms = { path = "../devolve-ui-tui-forms", features = ["images"] }
rand = "0.8.5"
test-log = "0.2.10"
env_logger = "0.9.0"
