[package]
name = "devolve-ui"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = "experimental data-binding graphics and UI engine"
repository = "https://github.com/jakobeha/devolve-ui.rs"
license = "Apache-2.0"
keywords = ["ui", "graphics"]
categories = ["rendering", "gui"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Ours
mini-rx = { path = "../mini-rx" }
dyn_struct2 = { path = "../dyn_struct" }
# Embed graphics files
rust-embed = "6.4.0"
# Derive more
derivative = "2.2.0"
derive_more = "0.99.17"
# Rust patterns
replace_with = "0.1.7"
transmute = "0.1.1"
# Logging
log = "0.4.17"

[dev-dependencies]
# Logging
test-log = "0.2.10"
env_logger = "0.9.0"
# TUI renderer
crossterm = "0.24.0"
# GPU renderer
wgpu = "0.13.1"
