[package]
name = "dui-bevy"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = ".dui for bevy engine"
repository = "https://github.com/jakobeha/dui-bevy"
license = "Apache-2.0"
keywords = ["engine", "bevy", "dui"]
categories = ["rendering", "gui", "game-engines", "graphics"]
edition = "2021"

[lib]
crate-type = ["lib"]

[features]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

[[test]]
name = "winit-tests"
path = "winit-tests/main.rs"
harness = false

[dependencies]
# Ours
devolve-ui-core = { path = "../devolve-ui-core" }
winit-modular = { path = "../winit-modular" }
# bevy engine
bevy = "0.8.0"
winit = "0.26.1"
# Load .dui files
serde = { version = "1.0.140", features = ["derive"] }
toml = "0.5.9"
logos = "0.12.1"
# Data structures
bitvec = "1.0.1"
bimap = "0.6.2"
arrayvec = "0.7.2"
# Derive more
derivative = "2.2.0"
derive_more = "0.99.17"
join-lazy-fmt = "0.9.2"
# Async -> sync
pollster = "0.2.5"
# Byte manipulation
bitflags = "1.3.2"
bytemuck = { version = "1.11.0", features = ["derive"] }
# Rust patterns
replace_with = "0.1.7"
transmute = "0.1.1"
slicevec = "0.1.1"
# Logging
log = "0.4.17"

[dev-dependencies]
devolve-ui-macros = { path = "../devolve-ui-macros" }
# Logging
test-log = "0.2.11"
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["full"] }